Fix overflow of long words to outside of their container

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -13,6 +13,11 @@ body {
   padding-bottom: 12rem;
 }
 
+.form-check > label {
+  max-width: 100%;
+  word-wrap: break-word !important;
+}
+
 .form-check {
   position: relative;
   padding: 10px 0 10px 40px;
